hot(inter-section) add the divider div for create the separation line between sections

--- a/index.html
+++ b/index.html
@@ -556,6 +556,8 @@
           </div>
         </div>
       </section>
+      <div class="divider"></div>
+      <!-- Section dev-progress -->
       <section class="dev-process">
         <div>
           <div class="dev-process__decoration"></div>
@@ -565,7 +567,7 @@
             </h2>
             <div class="dev-process__timeline"> 
               <div class="dev-process__line"></div>
-                <div class="dev-process__trophy">🏆</div>
+                <div class="dev-process__trophy">🏆</div> <!-- i can stop laughing this one work !!-->
                   <div class="dev-process__step dev-process__step--top" style="left: 0%;">
                     <div class="dev-process__connector"></div>
                       <div class="dev-process__card">
