feat(+hot) add finals section + little hotfixes

--- a/index.html
+++ b/index.html
@@ -619,6 +619,52 @@
             </div>
         </div>
       </section>
+      <!-- Section Featured Ressources -->
+       <section class="featured-resources">
+        <div>
+          <div class="featured-resources__decoration"></div>
+          <h2 class="featured-resources__title">
+            Featured<br>
+            <strong>Resources</strong>
+          </h2>
+          <div class="featured-resources__grid">
+            <article class="featured-resources__card">
+                <img src="img/article/rectangle1.svg" alt="Article" class="featured-resources__image">
+                <h3 class="featured-resources__card-title">How to Build a Scalable Application up to 1 Million Users on AWS</h3>
+                <a href="#" class="featured-resources__link">Read More →</a>
+            </article>
+            <article class="featured-resources__card">
+                <img src="img/article/rectangle2.svg" alt="Article" class="featured-resources__image">
+                <h3 class="featured-resources__card-title">How to Build a Scalable Application up to 1 Million Users on AWS</h3>
+                <a href="#" class="featured-resources__link">Read More →</a>
+            </article>
+            <article class="featured-resources__card">
+                <img src="img/article/rectangle3.svg" alt="Article" class="featured-resources__image">
+                <h3 class="featured-resources__card-title">How to Build a Scalable Application up to 1 Million Users on AWS</h3>
+                <a href="#" class="featured-resources__link">Read More →</a>
+            </article>
+            <article class="featured-resources__card">
+                <img src="img/article/rectangle4.svg" alt="Article" class="featured-resources__image">
+                <h3 class="featured-resources__card-title">How to Build a Scalable Application up to 1 Million Users on AWS</h3>
+                <a href="#" class="featured-resources__link">Read More →</a>
+            </article>
+            <article class="featured-resources__card">
+                <img src="img/article/rectangle5.svg" alt="Article" class="featured-resources__image">
+                <h3 class="featured-resources__card-title">How to Build a Scalable Application up to 1 Million Users on AWS</h3>
+                <a href="#" class="featured-resources__link">Read More →</a>
+            </article>
+          </div>
+        </div>
+      </section>
+      <section class="cta">
+        <div>
+          <img class="cta__highlight-button" src="img/highlight_button.svg" alt="bright the sun, son">
+          <div class="cta__box">
+            <h2 class="cta__title">Hire the best developers and<br>designers around!</h2>
+            <a href="#" class="cta__button">Hire Top Developers</a>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
