--- a/index.html
+++ b/index.html
@@ -317,8 +317,11 @@
           <circle cx="12" cy="12" r="11" fill="#9333EA"/>
           <path d="M11 8L15 12L11 16" stroke="#FFFFFF" stroke-width="2" stroke-linecap="round"/>
         </button>
+        <!-- ! decorative transition-->    
+        <img class="customer-feedbacks__arrow1" src="img/Deco-img-arrow.svg" alt="arrow decoration">
+        <img class="customer-feedbacks__arrow2" src="img/Deco-img-arrow.svg" alt="arrow decoration">
+        <img class="customer-feedbacks__circle" src="img/Ellipse.png" alt="round decoration">
       </section>
-      <!-- see for the transition with arrow later -->
        <!-- Section Case Studies -->
        <section class="case-studies">
         <div class="container">
@@ -666,5 +669,60 @@
         </div>
       </section>
     </main>
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__content">
+          <div class="footer__col footer__col--logo">
+            <div class="footer__brand">
+              <img src="img/logo.svg" alt="IK Developers" class="footer__logo">
+            </div>
+              <p class="footer__description">
+              Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+              </p>
+              <div class="footer__badge">
+                <img src="img/footer-badge.svg" alt="Google and parteners badge" class="footer__badge">
+                </div>
+              </div>
+              <div class="footer__col">
+                <h3 class="footer__title">Links</h3>
+                <ul class="footer__links">
+                  <li><a href="#about">About Us</a></li>
+                  <li><a href="#services">Services</a></li>
+                  <li><a href="#case-studies">Case Studies</a></li>
+                  <li><a href="#how-it-works">How It works</a></li>
+                  <li><a href="#blog">Blog</a></li>
+                  <li><a href="#careers">Careers</a></li>
+                  <li><a href="#areas">Areas We Serve</a></li>
+                </ul>
+            </div>
+            <div class="footer__col">
+              <h3 class="footer__title">Contact us</h3>
+              <p class="footer__text">
+                  Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+              </p>
+              <p class="footer__phone">+923183561921</p>
+            </div>
+            <div class="footer__col footer__col--social">
+              <div class="footer__social">
+                <a href="#" class="footer__social-link" aria-label="Facebook">
+                    <img src="img/social_media_logos/facebook.svg" alt="Facebook">
+                </a>
+                <a href="#" class="footer__social-link" aria-label="Instagram">
+                  <img src="img/social_media_logos/instagram.svg" alt="Instagram">
+                  </a>
+                  <a href="#" class="footer__social-link" aria-label="Twitter">
+                    <img src="img/social_media_logos/twitter.svg" alt="Twitter">
+                    </a>
+                    <a href="#" class="footer__social-link" aria-label="LinkedIn">
+                        <img src="img/social_media_logos/linkedin.svg" alt="LinkedIn">
+                    </a>
+                </div>
+             </div>
+          </div>
+          <div class="footer__bottom">
+            <p class="footer__copyright">© 2023 Copyright by IK Developers. All rights reserved.</p>
+          </div>
+      </div>
+    </footer>
   </body>
 </html>
