feat+hot(site) add decorations and fix many bugs and visual

--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
       </section>
       <!-- Section Building-software -->
       <section class="building-software">
-        <div class="container">
+        <div class="building-software__container">
           <div class="building-software__decoration"></div>
           <h2 class="building-software__title">
             Way of building<br>
@@ -399,10 +399,9 @@
           <div class="building-software__image">
             <img src="img/article/work__sofa.svg" alt="Team meeting">
           </div>
-        </div>
-        
-        <!-- Card 2 -->
-        <div class="building-software__card building-software__card--reverse">
+          </div>       
+          <!-- Card 2 -->
+          <div class="building-software__card building-software__card--reverse">
             <div class="building-software__content">
                 <h3>Build the right team to scale</h3>
                 <p>Finding the right talent is not easy. We help you find the talent that suits your needs, follows your processes, and sticks with you long term (not the case with freelancers</p>
@@ -417,13 +416,13 @@
                       </div>
                   </div>
               </blockquote>
-          </div>  
+            </div>  
             <div class="building-software__image">
               <img src="img/article/work__desk.svg" alt="Developers">
             </div>
-        </div>
-        <!-- Card 3 -->
-        <div class="building-software__card">
+          </div>
+          <!-- Card 3 -->
+          <div class="building-software__card">
             <div class="building-software__content">
               <h3>Build the right team to scale</h3>
               <p>Finding the right talent is not easy. We help you find the talent that suits your needs, follows your processes, and sticks with you long term (not the case with freelancers</p>
@@ -442,21 +441,27 @@
               <div class="building-software__image">
                 <img src="img/article/brainstorming.svg" alt="Office">
               </div>
-            </div>
           </div>
+          <!-- decorative bubbles -->
+          <img src="img/Ellipse_yellow.png" alt="Yellow bubble one" class="building-software__yellowbubble1">
+          <img src="img/Ellipse.png" alt="Red bubble one" class="building-software__redbubble1">
+          <img src="img/Ellipse.png" alt="Red bubble two" class="building-software__redbubble2">
+          <img src="img/Ellipse_yellow.png" alt="yellow bubble two" class="building-software__yellowbubble2">
+          <img src="img/Ellipse.png" alt="red bubble three" class="building-software__redbubble3">
+          <img src="img/Ellipse_yellow.png" alt="yellow bubble three" class="building-software__yellowbubble3">
+        </div>          
         </section>
         <!-- Section our approach -->
         <section class="approach">
-    <div>
-        <div class="approach__decoration"></div>
-        <h2 class="approach__title">
-            Our design and<br>
-            <strong>development approach</strong>
-        </h2>        
-        <!-- flexbox cards -->
-          <div class="approach__cards">
-            <div class="approach__card">
-                <div class="approach__icon">
+          <div>
+            <div class="approach__decoration"></div>
+              <h2 class="approach__title">
+              Our design and<br>
+              <strong>development approach</strong>
+              </h2>        
+              <div class="approach__cards">
+                <div class="approach__card">
+                  <div class="approach__icon">
                     <img src="img/article/rocket.svg" alt="UX Icon rocket for the winners">
                 </div>
                 <div class="approach__content">
@@ -661,8 +666,8 @@
       </section>
       <section class="cta">
         <div>
-          <img class="cta__highlight-button" src="img/highlight_button.svg" alt="bright the sun, son">
           <div class="cta__box">
+            <img class="cta__highlight-button" src="img/highlight_button.svg" alt="bright the sun, son">
             <h2 class="cta__title">Hire the best developers and<br>designers around!</h2>
             <a href="#" class="cta__button">Hire Top Developers</a>
           </div>
