hot(site) ok for now

--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet"/>
   </head>
   <body>
     <header>
@@ -20,13 +17,7 @@
             src="img/Logo.svg"
             alt="Logo Ik Developers"
             class="header__logo__icon"/>
-            <input type="checkbox" id="nav-toggle" class="nav__checkbox">
-            <label for="nav-toggle" class="nav__burger">
-              <span class="nav__burger-line"></span>
-              <span class="nav__burger-line"></span>
-              <span class="nav__burger-line"></span>
-            </label>
-          <ul class="nav__menu">
+            <ul class="nav__menu">
             <li><a href="#about">About us</a></li>
             <li><a href="#services">Services</a></li>
             <li><a href="#case-studies">Case Studies</a></li>
