hot(site) link ok.

--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
         </div>          
         </section>
         <!-- Section our approach -->
-        <section class="approach">
+        <section id="blog" class="approach">
           <div>
             <div class="section__decoration"></div>
               <h2 class="section__title">
@@ -513,7 +513,7 @@
         </div>
       </section>
       <!-- Section our tech stacks-->
-      <section class="tech-stack">
+      <section id="#careers" class="tech-stack">
         <div>
           <div class="section__decoration"></div>
           <h2 class="section__title">
@@ -623,7 +623,7 @@
         </div>
       </section>
       <!-- Section Featured Ressources -->
-       <section class="featured-resources">
+       <section id="areas" class="featured-resources">
         <div>
           <div class="section__decoration"></div>
           <h2 class="section__title">
@@ -659,7 +659,7 @@
           </div>
         </div>
       </section>
-      <section class="cta">
+      <section id="hire" class="cta">
         <div>
           <div class="cta__box">
             <img class="cta__highlight-button" src="img/highlight_button.svg" alt="bright the sun, son">
